# templates_openid_connect

./: README.md
01_exemplary_patterns/02_apisix_oidc/: docker-compose.yml
01_exemplary_patterns/02_apisix_oidc/apisix_conf/: apisix_v1.yaml  config.yaml
01_exemplary_patterns/03_fastapi_oidc/app_orig/: README.md
01_exemplary_patterns/04_fastapi_oidc_from_grok/: README.md  main.py  pyproject.toml
01_exemplary_patterns/05_fastapi_oidc_from_gemini/: GEMINI_AI_GUIDE.md  docker-compose.yml
01_exemplary_patterns/05_fastapi_oidc_from_gemini/app/: README.md  pyproject.toml
01_exemplary_patterns/98_apisix-dotnet_with_dashboard/: docker-compose.yml
code/: timestamp_last_sync.txt
code/01_exemplary_patterns/03_fastapi_oidc/app_orig/: main.py  pyproject.toml
code/01_exemplary_patterns/03_fastapi_oidc/app_orig/src/: deps.py  session.py
code/01_exemplary_patterns/05_fastapi_oidc_from_gemini/app/: README.md  pyproject.toml  start_uvicorn.py  start_uvicorn_classic.sh
code/01_exemplary_patterns/05_fastapi_oidc_from_gemini/app/src/: __init__.py  __main__.py  create_app.py
code/01_exemplary_patterns/05_fastapi_oidc_from_gemini/app/src/authentication/: authenticate_endpoints.py  oauth.py
code/01_exemplary_patterns/05_fastapi_oidc_from_gemini/app/src/config/: oidc.py  web_session.py
code/01_exemplary_patterns/05_fastapi_oidc_from_gemini/app/src/db/: user.py
code/01_exemplary_patterns/05_fastapi_oidc_from_gemini/app/src/routes/: api.py  authentication.py  main.py
code/fastapi-keycloak-auth2/: docker-compose.yml  requirements.txt
fastapi-keycloak-auth2/app/: auth.py  config.py
(+51 files in other folders)
