[project]
name = "04-fastapi-oidc-from-grok"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.0",
    "fastapi[standard]>=0.115.12",
    "itsdangerous>=2.2.0",
    "pydantic>=2.11.5",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn>=0.34.3",
]
