[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.5.2",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
]

# [project.scripts]
# start = "python main.py"
# dev = "uvicorn main:app --port 9080 --reload"


# [tool.uv.scripts]
# start = "python main.py"
#   dev = "uvicorn main:app --reload"
